<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.PlayManuallyActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_walls_text"
        android:text="@string/show_walls_string"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_solution_text"
        android:text="@string/show_solution_string"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@id/show_full_map_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_full_map_text"
        android:text="@string/show_map_string"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@id/show_walls_text"
        app:layout_constraintRight_toLeftOf="@id/show_solution_text"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/show_walls_text"
        android:id="@+id/walls_button"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/show_full_map_text"
        android:id="@+id/map_button"
        app:layout_constraintLeft_toRightOf="@id/show_walls_text"
        android:layout_marginStart="30dp"
        />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/show_full_map_text"
        android:id="@+id/solution_button"
        app:layout_constraintLeft_toRightOf="@id/show_full_map_text"
        android:layout_marginStart="30dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/back_button"
        android:text="@string/backward_string"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/back_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/jump_button"
        android:text="@string/jump_string"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/jump_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/forwards_button"
        android:text="@string/forward_string"
        />

    <Button
        android:id="@+id/left_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/left_string"
        app:layout_constraintBottom_toTopOf="@id/back_button"
        app:layout_constraintRight_toLeftOf="@id/jump_button" />

    <Button
        android:id="@+id/right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/right_string"
        app:layout_constraintBottom_toTopOf="@id/back_button"
        app:layout_constraintLeft_toRightOf="@id/jump_button"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shortcut_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/walls_button"
        app:layout_constraintBottom_toTopOf="@id/forwards_button"
        android:textSize="130dp"
        android:text="@string/shortcut_string"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>