<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.PlayAnimationActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_walls_text"
        android:text="@string/show_walls_string"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_solution_text"
        android:text="@string/show_solution_string"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@id/show_full_map_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_full_map_text"
        android:text="@string/show_map_string"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@id/show_walls_text"
        app:layout_constraintRight_toLeftOf="@id/show_solution_text"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/show_walls_text"
        android:id="@+id/walls_button"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/show_full_map_text"
        android:id="@+id/map_button"
        app:layout_constraintLeft_toRightOf="@id/show_walls_text"
        android:layout_marginStart="30dp"
        />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/show_full_map_text"
        android:id="@+id/solution_button"
        app:layout_constraintLeft_toRightOf="@id/show_full_map_text"
        android:layout_marginStart="30dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_pause_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/pause_string"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@id/path_length_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/path_length_string"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>